@@ -1,5 +1,5 @@
 PREFIX=$(HOME)/usr
 PROJNAME=dzco
-VERSION=1.4.7
+VERSION=1.4.8
 
-DEPENDENCY="zeda=1.6.4;zm=1.3.13"
+DEPENDENCY="zeda=1.6.29;zm=1.4.10"
