@@ -113,7 +113,7 @@ typedef struct _dzSys{
  * they succeed to connect the specified systems. Otherwise,
  * the false value is returned.
  */
-__EXPORT bool dzSysConnect(dzSys *s1, int p1, dzSys *s2, int p2);
+__EXPORT bool dzSysConnect(dzSys *s1, uint p1, dzSys *s2, uint p2);
 __EXPORT void dzSysChain(int n, ...);
 
 /* default destroying method */
@@ -136,7 +136,7 @@ __EXPORT void dzSysFPrintZTK(FILE *fp, dzSys *sys);
 zArrayClass( dzSysArray, dzSys );
 
 /*! \brief allocate an array of systems. */
-__EXPORT dzSysArray *dzSysArrayAlloc(dzSysArray *arr, int size);
+__EXPORT dzSysArray *dzSysArrayAlloc(dzSysArray *arr, uint size);
 
 /*! \brief destroy an array of systems. */
 __EXPORT void dzSysArrayDestroy(dzSysArray *arr);
