@@ -30,7 +30,7 @@ static void _dzSysMIFPrintZTK(FILE *fp, dzSys *sys)
 
 static zVec _dzSysAdderUpdate(dzSys *sys, double dt)
 {
-  int i;
+  uint i;
 
   dzSysOutputVal(sys,0) = dzSysInputVal(sys,0);
   for( i=1; i<dzSysInputNum(sys); i++ )
@@ -55,13 +55,12 @@ dzSysCom dz_sys_adder_com = {
 };
 
 /* create an adder. */
-dzSys *dzSysAdderCreate(dzSys *sys, int n)
+dzSys *dzSysAdderCreate(dzSys *sys, uint n)
 {
   dzSysInit( sys );
   sys->com = &dz_sys_adder_com;
   dzSysAllocInput( sys, n );
-  return dzSysInputNum(sys) == n &&
-         dzSysAllocOutput( sys, 1 ) ? sys : NULL;
+  return dzSysInputNum(sys) == n && dzSysAllocOutput( sys, 1 ) ? sys : NULL;
 }
 
 /* ********************************************************** */
@@ -70,7 +69,7 @@ dzSys *dzSysAdderCreate(dzSys *sys, int n)
 
 static zVec _dzSysSubtrUpdate(dzSys *sys, double dt)
 {
-  int i;
+  uint i;
 
   dzSysOutputVal(sys,0) = dzSysInputVal(sys,0);
   for( i=1; i<dzSysInputNum(sys); i++ )
@@ -95,13 +94,12 @@ dzSysCom dz_sys_subtr_com = {
 };
 
 /* create a subtractor. */
-dzSys *dzSysSubtrCreate(dzSys *sys, int n)
+dzSys *dzSysSubtrCreate(dzSys *sys, uint n)
 {
   dzSysInit( sys );
   sys->com = &dz_sys_subtr_com;
   dzSysAllocInput( sys, n );
-  return dzSysInputNum(sys) == n &&
-         dzSysAllocOutput( sys, 1 ) ? sys : NULL;
+  return dzSysInputNum(sys) == n && dzSysAllocOutput( sys, 1 ) ? sys : NULL;
 }
 
 /* ********************************************************** */
